--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,4 +1,4 @@
-name: Deploy Website
+name: Deploy React TypeScript App
 
 on:
   push:
@@ -18,10 +18,21 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Upload files
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build
+        run: npm run build
+
+      - name: Upload build
         uses: actions/upload-pages-artifact@v3
         with:
-          path: .
+          path: dist
 
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
